viel refactor und auswahl "dauerläufer" hinzugefügt.